--- a/templates/about.mustache
+++ b/templates/about.mustache
@@ -28,6 +28,7 @@
             <br/><br/>
             <div class="well">
                <h3>About</h3>
+               <p>Liquidex.it is based on <a href="https://leocomandini.github.io/2021/06/15/liquidex.html" target="_blank">LiquiDEX protocol.</p>
                </p></p>
             </div>
          </div>
