--- a/templates/home.mustache
+++ b/templates/home.mustache
@@ -28,7 +28,8 @@
             <br/><br/>
             <div class="well">
                <h3>Home</h3>
-               </p></p>
+               <p>LiquiDEX is a working protocol to perform 2-steps atomic swaps on Liquid. It requires a single interaction by the swap parties, which drastically improves the UX. It can be used as a building block for implementing more complex systems such as automated OTC desks, auctions or even a decentralized exchange (DEX).</p>
+               <p>In this website you can find ont some swap proposals or add your ones.</p>
             </div>
          </div>
       </div>
