--- a/templates/book.mustache
+++ b/templates/book.mustache
@@ -32,10 +32,10 @@
                {{#results}}
 
                {{#available}}
-               <a class="btn btn-block btn-success btn-wrap-text" role="button" data-toggle="collapse" href="#collapse_{{id}}" aria-expanded="false" aria-controls="collapse_{{id}}"><canvas width="30" height="30" style="vertical-align: middle;" data-jdenticon-value="{{id}}"></canvas>Send {{#output}}{{amount}} {{name}}{{/output}} <br/> Receive {{#input}}{{amount}} {{name}}{{/input}}</a>
+               <a class="btn btn-block btn-success btn-wrap-text" role="button" data-toggle="collapse" href="#collapse_{{id}}" aria-expanded="false" aria-controls="collapse_{{id}}"><canvas width="30" height="30" style="vertical-align: middle;" data-jdenticon-value="{{id}}"></canvas>Version {{version}} <br/> Send {{#output}}{{amount}} {{name}}{{/output}} <br/> Receive {{#input}}{{amount}} {{name}}{{/input}}</a>
                {{/available}}
                {{^available}}
-               <a class="btn btn-block btn-danger btn-wrap-text" role="button" data-toggle="collapse" href="#collapse_{{id}}" aria-expanded="false" aria-controls="collapse_{{id}}"><canvas width="30" height="30" style="vertical-align: middle;" data-jdenticon-value="{{id}}"></canvas>Send {{#output}}{{amount}} {{name}}{{/output}} <br/> Receive {{#input}}{{amount}} {{name}}{{/input}}</a>
+               <a class="btn btn-block btn-danger btn-wrap-text" role="button" data-toggle="collapse" href="#collapse_{{id}}" aria-expanded="false" aria-controls="collapse_{{id}}"><canvas width="30" height="30" style="vertical-align: middle;" data-jdenticon-value="{{id}}"></canvas>Version {{version}} <br/> Send {{#output}}{{amount}} {{name}}{{/output}} <br/> Receive {{#input}}{{amount}} {{name}}{{/input}}</a>
                {{/available}}
 
                <div class="collapse" id="collapse_{{id}}">
