add qrcode with link to json proposal

--- a/templates/book.mustache
+++ b/templates/book.mustache
@@ -58,6 +58,7 @@
                    {{/input}}
                    <hr/>
                    <pre>{{json}}</pre><br/>
+                   <center><img src="{{qr}}"></center><br/>
                    <a href="/api/getproposal?id={{id}}" target="_blank"><button type="button" class="btn btn-danger btn-s"><span class="fas fa-globe-americas" aria-hidden="true"></span>Download the proposal</button></a>
 
                  </div>
