--- a/templates/book.mustache
+++ b/templates/book.mustache
@@ -64,6 +64,8 @@
                  </div>
                </div>
                {{/results}}
+               <hr/>
+               <p>You can consult book via API using <b>http://liquidex_website/api/book</b>, if you want to see the complete book including taken proposal use the url <b>http://liquidex_website/api/book?all</b>.</p>
 
             </div>
          </div>
