--- a/templates/about.mustache
+++ b/templates/about.mustache
@@ -28,8 +28,54 @@
             <br/><br/>
             <div class="well">
                <h3>About</h3>
-               <p>Liquidex.it is based on <a href="https://leocomandini.github.io/2021/06/15/liquidex.html" target="_blank">LiquiDEX protocol.</p>
-               </p></p>
+	       <p>Liquidex.it is based on <a href="https://leocomandini.github.io/2021/06/15/liquidex.html" target="_blank">LiquiDEX protocol.</a></p>
+               <h3>Open source</h3>
+               <p>The MIT License</p>
+               <br />
+               <p>Copyright 2021-2024 Valerio Vaccaro</p>
+               <br />
+               <p>
+            Permission is hereby granted, free of charge, to any person
+            obtaining a copy of this software and associated documentation files
+            (the "Software"), to deal in the Software without restriction,
+            including without limitation the rights to use, copy, modify, merge,
+            publish, distribute, sublicense, and/or sell copies of the Software,
+            and to permit persons to whom the Software is furnished to do so,
+            subject to the following conditions:
+               </p>
+               <br />
+               <p>
+            The above copyright notice and this permission notice shall be
+            included in all copies or substantial portions of the Software.
+               </p>
+               <br />
+               <p>
+            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+            EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+            MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+            NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
+            BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
+            ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
+            CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+            SOFTWARE.
+               </p>
+               <br />
+               <p>
+            Source code availabe on
+               <a href="https://github.com/valerio-vaccaro/liquidex.it" target="_blank">Github page</a>.
+              </p>
+              <br />
+              <h3>API</h3>
+              <p>
+            All functions will be expose on API interface with the same limit
+            connected with http pages.
+              </p>
+
+              <h3>TIP</h3>
+              <p>
+            Tip on Liquid main net
+              <code>VJLDmgJH4HSARzpvSMjfWjrxcYfybnQFZda6jcTBzC8G97m8McZ47yguVwETSTGgRfgf4WQaZhmMr61D</code>
+              </p>
             </div>
          </div>
       </div>
